--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Victor React</title>
+    <title>Victor Ekeke - Front-end Developer & Designer</title>
+    <meta name="description" content="Professional web developer and designer specializing in responsive websites, landing pages, and UI/UX design. Based in Austin, Texas." />
+    <meta name="keywords" content="web developer, web designer, UI/UX, responsive design, landing pages, Austin Texas" />
+    <meta name="author" content="Victor Ekeke" />
   </head>
   <body>
     <div id="root"></div>
