--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="Professional web developer and designer specializing in responsive websites, landing pages, and UI/UX design. Based in Austin, Texas." />
     <meta name="keywords" content="web developer, web designer, UI/UX, responsive design, landing pages, Austin Texas" />
     <meta name="author" content="Victor Ekeke" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#f97316" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
     <div id="root"></div>
